<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/action_generate_report"
        android:title="Generate Report"
        android:icon="@drawable/ic_report"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_sort"
        android:title="Sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_title"
                android:title="@string/sort_title" />
            <item
                android:id="@+id/sort_author"
                android:title="@string/sort_author" />
            <item
                android:id="@+id/sort_date"
                android:title="@string/sort_date" />
        </menu>
    </item>
</menu>